@@ -1,25 +1,24 @@
 
 package net.mcreator.minecraftgators.world.biome;
 
-import net.minecraftforge.common.BiomeManager;
 import net.minecraftforge.common.BiomeDictionary;
 
-import net.minecraft.world.level.levelgen.surfacebuilders.SurfaceBuilderBaseConfiguration;
-import net.minecraft.world.level.levelgen.surfacebuilders.SurfaceBuilder;
-import net.minecraft.world.level.levelgen.surfacebuilders.ConfiguredSurfaceBuilder;
-import net.minecraft.world.level.levelgen.placement.FrequencyWithExtraChanceDecoratorConfiguration;
-import net.minecraft.world.level.levelgen.placement.FeatureDecorator;
+import net.minecraft.world.level.levelgen.placement.SurfaceWaterDepthFilter;
+import net.minecraft.world.level.levelgen.placement.RarityFilter;
+import net.minecraft.world.level.levelgen.placement.NoiseThresholdCountPlacement;
+import net.minecraft.world.level.levelgen.placement.InSquarePlacement;
+import net.minecraft.world.level.levelgen.placement.CountPlacement;
+import net.minecraft.world.level.levelgen.placement.BiomeFilter;
 import net.minecraft.world.level.levelgen.feature.trunkplacers.StraightTrunkPlacer;
-import net.minecraft.world.level.levelgen.feature.stateproviders.SimpleStateProvider;
+import net.minecraft.world.level.levelgen.feature.stateproviders.BlockStateProvider;
 import net.minecraft.world.level.levelgen.feature.foliageplacers.BlobFoliagePlacer;
 import net.minecraft.world.level.levelgen.feature.featuresize.TwoLayersFeatureSize;
 import net.minecraft.world.level.levelgen.feature.configurations.TreeConfiguration;
-import net.minecraft.world.level.levelgen.feature.configurations.NoiseDependantDecoratorConfiguration;
 import net.minecraft.world.level.levelgen.feature.Feature;
-import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
 import net.minecraft.world.level.levelgen.GenerationStep;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.biome.MobSpawnSettings;
+import net.minecraft.world.level.biome.Climate;
 import net.minecraft.world.level.biome.BiomeSpecialEffects;
 import net.minecraft.world.level.biome.BiomeGenerationSettings;
 import net.minecraft.world.level.biome.Biome;
@@ -30,8 +29,9 @@ import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.Music;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.resources.ResourceKey;
-import net.minecraft.data.worldgen.StructureFeatures;
-import net.minecraft.data.worldgen.Features;
+import net.minecraft.data.worldgen.placement.PlacementUtils;
+import net.minecraft.data.worldgen.features.VegetationFeatures;
+import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.BiomeDefaultFeatures;
 import net.minecraft.data.BuiltinRegistries;
 import net.minecraft.core.Registry;
@@ -40,69 +40,53 @@ import net.mcreator.minecraftgators.world.features.treedecorators.CatFoodPlainsT
 import net.mcreator.minecraftgators.world.features.treedecorators.CatFoodPlainsLeaveDecorator;
 import net.mcreator.minecraftgators.init.MinecraftGatorsModBlocks;
 import net.mcreator.minecraftgators.init.MinecraftGatorsModBiomes;
-import net.mcreator.minecraftgators.MinecraftGatorsMod;
 
-import java.util.Map;
-import java.util.HashMap;
+import java.util.List;
 
 import com.google.common.collect.ImmutableList;
 
 public class CatFoodPlainsBiome {
-	private static final ConfiguredSurfaceBuilder<?> SURFACE_BUILDER = SurfaceBuilder.DEFAULT.configured(new SurfaceBuilderBaseConfiguration(
-			MinecraftGatorsModBlocks.CAT_FOOD_BLOCK.defaultBlockState(), Blocks.STONE.defaultBlockState(), Blocks.STONE.defaultBlockState()));
+	public static final Climate.ParameterPoint PARAMETER_POINT = new Climate.ParameterPoint(Climate.Parameter.span(-0.014285714286f, 0.014285714286f),
+			Climate.Parameter.span(-0.014285714286f, 0.014285714286f), Climate.Parameter.span(0.495714285714f, 0.524285714286f),
+			Climate.Parameter.span(0.785714285714f, 0.814285714286f), Climate.Parameter.point(0),
+			Climate.Parameter.span(-0.7894953774f, -0.760923948828f), 0);
 
 	public static Biome createBiome() {
 		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(12638463).waterColor(-10066432).waterFogColor(329011)
 				.skyColor(7972607).foliageColorOverride(10387789).grassColorOverride(9470285)
 				.backgroundMusic(new Music(new SoundEvent(new ResourceLocation("ambient.cave")), 12000, 24000, true)).build();
-		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder().surfaceBuilder(SURFACE_BUILDER);
-		biomeGenerationSettings.addStructureStart(StructureFeatures.STRONGHOLD);
-		biomeGenerationSettings.addStructureStart(StructureFeatures.MINESHAFT);
-		biomeGenerationSettings.addStructureStart(StructureFeatures.PILLAGER_OUTPOST);
-		biomeGenerationSettings.addStructureStart(StructureFeatures.VILLAGE_PLAINS);
-		biomeGenerationSettings.addStructureStart(StructureFeatures.RUINED_PORTAL_STANDARD);
-		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, register("trees", Feature.TREE
-				.configured((new TreeConfiguration.TreeConfigurationBuilder(
-						new SimpleStateProvider(MinecraftGatorsModBlocks.CAT_LOG_Y_LOG.defaultBlockState()), new StraightTrunkPlacer(7, 2, 0),
-						new SimpleStateProvider(MinecraftGatorsModBlocks.CAT_LOG_Y_LEAVES.defaultBlockState()),
-						new SimpleStateProvider(Blocks.OAK_SAPLING.defaultBlockState()),
-						new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)))
-								.decorators(ImmutableList.of(CatFoodPlainsLeaveDecorator.INSTANCE, CatFoodPlainsTrunkDecorator.INSTANCE)).build())
-				.decorated(Features.Decorators.HEIGHTMAP_SQUARE)
-				.decorated(FeatureDecorator.COUNT_EXTRA.configured(new FrequencyWithExtraChanceDecoratorConfiguration(1, 0.1F, 1)))));
+		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
+		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION, PlacementUtils.register(
+				"minecraft_gators:tree_cat_food_plains",
+				FeatureUtils.register("minecraft_gators:tree_cat_food_plains", Feature.TREE,
+						new TreeConfiguration.TreeConfigurationBuilder(
+								BlockStateProvider.simple(MinecraftGatorsModBlocks.CAT_LOG_Y_LOG.get().defaultBlockState()),
+								new StraightTrunkPlacer(7, 2, 0),
+								BlockStateProvider.simple(MinecraftGatorsModBlocks.CAT_LOG_Y_LEAVES.get().defaultBlockState()),
+								new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
+								.decorators(ImmutableList.of(CatFoodPlainsLeaveDecorator.INSTANCE, CatFoodPlainsTrunkDecorator.INSTANCE)).build()),
+				List.of(CountPlacement.of(1), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
+						PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				register("grass",
-						Feature.RANDOM_PATCH.configured(Features.Configs.DEFAULT_GRASS_CONFIG).decorated(Features.Decorators.HEIGHTMAP_DOUBLE_SQUARE)
-								.decorated(FeatureDecorator.COUNT_NOISE.configured(new NoiseDependantDecoratorConfiguration(-0.8D, 5, 4)))));
+				PlacementUtils.register("minecraft_gators:grass_cat_food_plains", VegetationFeatures.PATCH_GRASS,
+						List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE,
+								BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				register("flower", Feature.FLOWER.configured(Features.Configs.DEFAULT_FLOWER_CONFIG).decorated(Features.Decorators.ADD_32)
-						.decorated(Features.Decorators.HEIGHTMAP_SQUARE).count(2)));
-		BiomeDefaultFeatures.addDefaultCarvers(biomeGenerationSettings);
+				PlacementUtils.register("minecraft_gators:flower_cat_food_plains", VegetationFeatures.FLOWER_DEFAULT, List.of(CountPlacement.of(2),
+						RarityFilter.onAverageOnceEvery(32), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())));
+		BiomeDefaultFeatures.addDefaultCarversAndLakes(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultOres(biomeGenerationSettings);
 		BiomeDefaultFeatures.addSurfaceFreezing(biomeGenerationSettings);
-		MobSpawnSettings.Builder mobSpawnInfo = new MobSpawnSettings.Builder().setPlayerCanSpawn();
+		MobSpawnSettings.Builder mobSpawnInfo = new MobSpawnSettings.Builder();
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(EntityType.ZOMBIE, 20, 4, 4));
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).biomeCategory(Biome.BiomeCategory.NONE).depth(0.1f).scale(0.2f)
-				.temperature(0.5f).downfall(0.5f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build())
-				.generationSettings(biomeGenerationSettings.build()).build();
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).biomeCategory(Biome.BiomeCategory.NONE).temperature(0.5f)
+				.downfall(0.5f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build())
+				.build();
 	}
 
 	public static void init() {
-		Registry.register(BuiltinRegistries.CONFIGURED_SURFACE_BUILDER, new ResourceLocation(MinecraftGatorsMod.MODID, "cat_food_plains"),
-				SURFACE_BUILDER);
-		CONFIGURED_FEATURES.forEach((resourceLocation, configuredFeature) -> Registry.register(BuiltinRegistries.CONFIGURED_FEATURE, resourceLocation,
-				configuredFeature));
 		BiomeDictionary.addTypes(
-				ResourceKey.create(Registry.BIOME_REGISTRY, BuiltinRegistries.BIOME.getKey(MinecraftGatorsModBiomes.CAT_FOOD_PLAINS)),
+				ResourceKey.create(Registry.BIOME_REGISTRY, BuiltinRegistries.BIOME.getKey(MinecraftGatorsModBiomes.CAT_FOOD_PLAINS.get())),
 				BiomeDictionary.Type.PLAINS);
-		BiomeManager.addBiome(BiomeManager.BiomeType.WARM, new BiomeManager.BiomeEntry(
-				ResourceKey.create(Registry.BIOME_REGISTRY, BuiltinRegistries.BIOME.getKey(MinecraftGatorsModBiomes.CAT_FOOD_PLAINS)), 1));
-	}
-
-	private static final Map<ResourceLocation, ConfiguredFeature<?, ?>> CONFIGURED_FEATURES = new HashMap<>();
-
-	private static ConfiguredFeature<?, ?> register(String name, ConfiguredFeature<?, ?> configuredFeature) {
-		CONFIGURED_FEATURES.put(new ResourceLocation(MinecraftGatorsMod.MODID, name + "_cat_food_plains"), configuredFeature);
-		return configuredFeature;
 	}
 }
